// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderButtonSignIn - Snapshots > matches snapshot for default HeaderButtonSignIn 1`] = `
<button
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <span
    class="mr-2 h-4 w-4"
    data-testid="log-in-icon"
  />
  Sign in
</button>
`;

exports[`HeaderButtonSignIn - Snapshots > matches snapshot with custom className 1`] = `
<button
  class="custom-class"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <span
    class="mr-2 h-4 w-4"
    data-testid="log-in-icon"
  />
  Sign in
</button>
`;
